--- a/lms/static/sass/course/layout/_courseware_preview.scss
+++ b/lms/static/sass/course/layout/_courseware_preview.scss
@@ -1,3 +1,4 @@
+$proctoring-banner-text-size: 14px;
 .wrapper-preview-menu {
   @include clearfix();
 
@@ -67,7 +68,7 @@
   }
 
   .exam-timer {
-    font-size: 14px;
+    font-size: $proctoring-banner-text-size;
     background-color: rgb(229, 234, 236);
     padding: $baseline ($baseline*2);
     border-left: 4px solid theme-color("primary");
@@ -189,6 +190,10 @@
         border-bottom-left-radius: 0;
         border-top-left-radius: 0;
         margin-right: 0;
+      }
+      h3 {
+        display: inline;
+        font-size: $proctoring-banner-text-size;
       }
 
       b {
